--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-paper": "^5.1.4"
+    "react-native-paper": "^5.1.4",
+    "react-native-snap-carousel": "^4.0.0-beta.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@faker-js/faker": "^7.6.0"
   },
   "private": true
 }
