--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.1.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "^13.4.0",
     "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
