--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Dependency directories
+/node_modules
+/client/node_modules
+/server/node_modules
 
-*.env
-temp.js
+# Environment variables
+/.env
+
+# Build output
+/client/build
+/server/build
+
+# Logs
+/logs
+
+# IDE files
+/.vscode
+/.idea
+
+# Testing and coverage reports
+/coverage
+
+# Mac specific files
+.DS_Store
+
+# Other generated files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
