--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,2 +1,2 @@
 PORT =5000
-MONGO_URI = "mongodb+srv://admin:0142KEiKUwctsEuE@cluster0.umlgqlu.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI = "mongodb+srv://admin:LRtJzBefuSHOimzt@cluster0.umlgqlu.mongodb.net/?retryWrites=true&w=majority"
